apps/files/css/files.scss
/* ... */
// Ellipsize long sharer names
#fileList .action.action-share.permanent.shared-style span:not(.icon) {
  display: inline-block;
  max-width: 70px;
  overflow: hidden;
  text-overflow: ellipsis;
  vertical-align: middle;
  margin-left: 6px;
}

#fileList .remoteAddress .userDomain {
  margin-left: 0 !important;
}

#fileList .favorite-mark.permanent {
  opacity: 1;
}

#fileList .fileActionsMenu a.action:hover,
#fileList .fileActionsMenu a.action:focus,
  /* show share action of shared items darker to distinguish from non-shared */
#fileList a.action.action-share.shared-style:hover,
#fileList a.action.action-share.shared-style:focus {
  opacity: 1;
}

#fileList tr a.action.disabled {
  background: none;
}

#selectedActionsList a.download.disabled,
#fileList tr a.action.action-download.disabled {
  color: #000000;
}

#fileList tr:hover a.action.disabled:hover * {
  cursor: default;
}

.summary {
  opacity: .3;
  /* add whitespace to bottom of files list to correctly show dropdowns */
  height: 300px;
}

.summary:hover,
.summary:focus,
.summary,
table tr.summary td {
  background-color: transparent;
}

.summary td {
  border-bottom: none;
  vertical-align: top;
  padding-top: 20px;
}

.summary .info {
  margin-left: 40px;
}

table.dragshadow {
  width: auto;
  z-index: 100;
}

table.dragshadow td.filename {
  padding-left: 60px;
  padding-right: 16px;
  height: 36px;
}

table.dragshadow td.size {
  padding-right: 8px;
}

.mask {
  z-index: 50;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: $color-main-background;
  background-repeat: no-repeat no-repeat;
  background-position: 50%;
  opacity: 0.7;
  transition: opacity 100ms;
  -moz-transition: opacity 100ms;
  -o-transition: opacity 100ms;
  -ms-transition: opacity 100ms;
  -webkit-transition: opacity 100ms;
}

.mask.transparent {
  opacity: 0;
}

.newFileMenu {
  font-weight: 300;
  top: 100%;
  margin-top: 4px;
  min-width: 100px;
  margin-left: 7px;
  z-index: 1001;
}

#filestable .filename .action .icon,
#filestable .selectedActions a .icon,
#filestable .filename .favorite-mark .icon,
#controls .actions .button .icon {
  display: inline-block;
  vertical-align: middle;
  background-size: 16px 16px;
}

#filestable .filename .favorite-mark {
  // Override default icons to always hide the star icon and always show the
  // starred icon even when hovered or focused.
  & .icon-star {
    background-image: none;
  }
  & .icon-starred {
    background-image: url('../../../core/img/actions/starred.svg?v=1');
  }
}

#filestable .filename .action .icon.hidden,
#filestable .selectedActions a .icon.hidden,
#controls .actions .button .icon.hidden {
  display: none;
}

#filestable .filename .action .icon.loading,
#filestable .selectedActions a .icon.loading,
#controls .actions .button .icon.loading {
  width: 15px;
  height: 15px;
}

.app-files .actions .button.new {
  position: relative;
}

.app-files .actions .button.new .icon {
  margin-bottom: 2px;
}

.breadcrumb .canDrop > a,
#filestable tbody tr.canDrop {
  background-color: rgb(179, 230, 255);
}

#quota {
  margin: 0 !important;
  border: none;
  border-radius: 0;
  background-color: transparent;
  z-index: 1;

  .quota-container {
    height: 5px;
    border-radius: $border-radius;

    div {
      height: 100%;
      background-color: $color-primary;
    }
  }
}

#quotatext {
  padding: 0;
  height: 30px;
  line-height: 30px;
}

#progress {
  border: none;
  border-radius: 0;
  background-color: transparent;
  height: 5px;

  .progress-states {
    display: inline-block;
    vertical-align: top;
    height: 5px;
    border-radius: $border-radius;
  }
  .progress-used {
    @extend .progress-states;
    background-color: $color-primary;
  }
  .progress-unused {
    @extend .progress-states;
    background-color: #e6e6e6;
  }
  .progress-blocked {
    @extend .progress-states;
    background-color: darkgrey;
  }
}

